# rust-embedded-projects

./: commands.txt  weather.rs
no-std-blinky/: Cargo.toml  diagram.json  wokwi.toml
no-std-button-controlled-blink/: Cargo.toml  diagram.json  wokwi.toml
no-std-button-press-counter/: Cargo.toml  diagram.json  wokwi.toml
no-std-i2c-real-time-clock/: Cargo.toml  diagram.json  wokwi.toml
no-std-led-fading/: Cargo.toml  diagram.json  wokwi.toml
no-std-real-time-timer/: Cargo.toml  diagram.json  rustfmt.toml  wokwi.toml
no-std-real-time-timer/.cargo/: config.toml
no-std-real-time-timer/src/: main.rs
no-std-timer-based-delay/: Cargo.toml  diagram.json  wokwi.toml
no-std-voltmeter/: Cargo.toml  diagram.json  wokwi.toml
std-blinky/: Cargo.toml  wokwi.toml
std-blinky/src/: main.rs
std-button-press-counter/: Cargo.toml  wokwi.toml
std-button-press-counter/src/: main.rs
std-connecting-wifi/: Cargo.toml  wokwi.toml
std-connecting-wifi/src/: main.rs
std-i2c-real-time-clock/: Cargo.toml  diagram.json  wokwi.toml
std-led-bar-blink/: diagram.json
std-led-bar-blink/src/: main.rs
std-led-fading/: Cargo.toml  diagram.json  wokwi.toml
std-real-time-timer/: Cargo.toml  diagram.json  wokwi.toml
std-simple-http-client/: Cargo.toml  wokwi.toml
std-simple-http-server/: Cargo.toml  wokwi.toml
std-simple-voltmeter/: Cargo.toml  diagram.json  wokwi.toml
std-synchronizing-system-time/: Cargo.toml  wokwi.toml
std-synchronizing-system-time/src/: main.rs
std-temperature-sensing/: Cargo.toml  diagram.json  wokwi.toml
std-uart-xor-cipher/: Cargo.toml  diagram.json  wokwi.toml
std-weather/: Cargo.toml  wokwi.toml
(+9 files in other folders)
