[package]
name = "std-synchronizing-system-time"
version = "0.1.0"
authors = ["parallels"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "std-synchronizing-system-time"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.95"
chrono = "0.4.39"

[build-dependencies]
embuild = "0.33"
